--- a/app/src/main/res/drawable/count_shape.xml
+++ b/app/src/main/res/drawable/count_shape.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="#000000"/>
-    <corners android:radius="40dp"></corners>
+        android:color="#8e58d1"/>
+    <corners android:radius="8dp"/>
     <padding
         android:left="1dp"
         android:right="1dp"
