--- a/app/src/main/res/layout-large/popup_screen.xml
+++ b/app/src/main/res/layout-large/popup_screen.xml
@@ -15,13 +15,13 @@
             android:id="@+id/scroll_grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:layout_margin="8dp"
             android:columnWidth="50dp"
             android:numColumns="auto_fit"
+            android:horizontalSpacing="12dp"
             android:verticalSpacing="24dp"
-            android:horizontalSpacing="10dp"
             android:stretchMode="spacingWidthUniform">
-
         </GridView>
     </LinearLayout>
 
