--- a/app/src/main/res/layout/popup_screen.xml
+++ b/app/src/main/res/layout/popup_screen.xml
@@ -17,14 +17,14 @@
             android:id="@+id/scroll_grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:gravity="center"
             android:layout_gravity="center"
             android:numColumns="auto_fit"
+            android:horizontalSpacing="8dp"
             android:verticalSpacing="24dp"
-            android:horizontalSpacing="2dp"
             android:stretchMode="spacingWidthUniform"
             android:columnWidth="45dp">
-
         </GridView>
     </LinearLayout>
 
