--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -129,6 +129,26 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_Question_no_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/time_layout"
+            android:layout_marginStart="90sp"
+            android:textSize="20sp"
+            android:textColor="@android:color/black"
+            android:layout_toEndOf="@+id/btn_review_info"
+            android:text="Question no." />
+        <TextView
+            android:id="@+id/tv_Question_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/time_layout"
+            android:layout_marginStart="10sp"
+            android:textSize="20sp"
+            android:textColor="@android:color/black"
+            android:layout_toEndOf="@+id/tv_Question_no_label" />
+
     </RelativeLayout>
 
     <View
