--- a/app/src/main/res/layout-large/activity_flash_attempt_data.xml
+++ b/app/src/main/res/layout-large/activity_flash_attempt_data.xml
@@ -121,6 +121,7 @@
             android:id="@+id/tv_fdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -131,6 +132,7 @@
             android:id="@+id/tv_fknowcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -141,6 +143,7 @@
             android:id="@+id/tv_fdonknowcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -151,6 +154,7 @@
             android:id="@+id/tv_fskipcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -161,6 +165,7 @@
             android:id="@+id/tv_fpercentage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
