--- a/app/src/main/res/layout/activity_listoftests.xml
+++ b/app/src/main/res/layout/activity_listoftests.xml
@@ -40,7 +40,7 @@
                     <TextView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:text="Start"
+                        android:text="New Test"
                         android:textStyle="bold"
                         android:gravity="center_vertical"
                         android:textColor="#FFFFFF"
@@ -50,7 +50,7 @@
                     <TextView
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:text="Resume"
+                        android:text="Action"
                         android:textStyle="bold"
                         android:gravity="center_vertical"
                         android:textColor="#FFFFFF"
