--- a/app/src/main/res/layout-large/popup_screen.xml
+++ b/app/src/main/res/layout-large/popup_screen.xml
@@ -21,16 +21,15 @@
             android:numColumns="auto_fit"
             android:horizontalSpacing="12dp"
             android:verticalSpacing="24dp"
+            android:scrollbars="vertical"
             android:stretchMode="spacingWidthUniform">
         </GridView>
     </LinearLayout>
 
-
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal|bottom">
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true">
 
         <Button android:id="@+id/close_button"
             android:layout_width="match_parent"
