--- a/app/src/main/res/layout/popup_screen.xml
+++ b/app/src/main/res/layout/popup_screen.xml
@@ -3,8 +3,7 @@
     android:id="@+id/popup_element"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/popup_elevation"
-    >
+    android:background="@drawable/popup_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,18 +22,16 @@
             android:numColumns="auto_fit"
             android:horizontalSpacing="8dp"
             android:verticalSpacing="24dp"
+            android:scrollbars="vertical"
             android:stretchMode="spacingWidthUniform"
             android:columnWidth="45dp">
         </GridView>
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignBottom="@+id/llscg"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal|bottom">
+        android:layout_alignParentBottom="true">
 
         <Button android:id="@+id/close_button"
             android:layout_width="match_parent"
