--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -183,6 +183,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
+                android:layoutAnimation="@anim/layout_animation_falldown"
                 android:orientation="vertical">
 
                 <ImageView
