--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -26,6 +26,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/colorAccent"
                 android:layout_marginRight="3dp"
+                android:elevation="5dp"
                 android:background="@drawable/btn_shape"/>
 
             <Button
@@ -36,6 +37,7 @@
                 android:textSize="18sp"
                 android:layout_marginLeft="3dp"
                 android:layout_weight="1"
+                android:elevation="5dp"
                 android:layout_height="100dp" />
 
         </LinearLayout>
