--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -240,7 +240,7 @@
             android:layout_weight="1"
             android:background="@drawable/test_button_custom"
             android:textColor="@drawable/test_text_custom"
-            android:text="Confirm/Back"
+            android:text="Back"
             android:layout_marginEnd="5dp"
             android:drawablePadding="0dp"
             android:drawableStart="@drawable/ic_arrow_back_24dp"
@@ -276,7 +276,7 @@
             android:textColor="@drawable/test_text_custom"
             android:drawableEnd="@drawable/ic_arrow_forward_24dp"
             android:drawablePadding="0dp"
-            android:text="Confirm/Next" />
+            android:text="Next" />
 
     </LinearLayout>
 
