--- a/app/src/main/res/layout-large/activity_sample.xml
+++ b/app/src/main/res/layout-large/activity_sample.xml
@@ -100,34 +100,53 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:layout_margin="3dp"
-                        android:orientation="horizontal">
+                        android:orientation="vertical"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/tv_Qid"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical|center_horizontal|center"
+                            android:textSize="12sp"
+                            android:textStyle="normal"
+                            android:hint="Qid"
+                            android:layout_margin="2dp"
+                            android:textColor="#000000"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal|center_vertical|center"
-                            android:layout_weight="1">
-                            <Button
-                                android:id="@+id/btn_groupQues"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:background="@drawable/groupletter" />
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:layout_margin="3dp"
+                            android:orientation="horizontal">
 
-                        </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal|center_vertical|center"
+                                android:layout_weight="1">
+                                <Button
+                                    android:id="@+id/btn_groupQues"
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    android:background="@drawable/groupletter" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_horizontal|center_vertical|center"
-                            android:layout_weight="1">
-                            <Button
-                                android:id="@+id/btn_exit"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:background="@drawable/exit" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal|center_vertical|center"
+                                android:layout_weight="1">
+                                <Button
+                                    android:id="@+id/btn_exit"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
+                                    android:background="@drawable/exit" />
+
+                            </LinearLayout>
 
                         </LinearLayout>
 
