--- a/app/src/main/res/layout/activity_flash_attempt_data.xml
+++ b/app/src/main/res/layout/activity_flash_attempt_data.xml
@@ -118,7 +118,6 @@
         android:padding="3dp">
 
         <TextView
-            android:id="@+id/tv_fdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
@@ -128,8 +127,17 @@
             android:layout_weight="1"
             android:text="Date-Time"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|center_vertical"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:text="Attempted"/>
+
         <TextView
-            android:id="@+id/tv_fknowcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
@@ -140,7 +148,6 @@
             android:text="Known"/>
 
         <TextView
-            android:id="@+id/tv_fdonknowcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
@@ -151,7 +158,6 @@
             android:text="UnKnown"/>
 
         <TextView
-            android:id="@+id/tv_fskipcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
@@ -162,7 +168,6 @@
             android:text="Skipped"/>
 
         <TextView
-            android:id="@+id/tv_fpercentage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
