--- a/app/src/main/res/layout-large/activity_flashattemptitem.xml
+++ b/app/src/main/res/layout-large/activity_flashattemptitem.xml
@@ -20,6 +20,16 @@
         android:layout_weight="1"
         android:hint="date"/>
 
+        <TextView
+            android:id="@+id/tv_fattemptQcount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:layout_weight="1"
+            android:hint="aQcount"/>
+
     <TextView
         android:id="@+id/tv_fknowcount"
         android:layout_width="match_parent"
