--- a/app/src/main/res/layout/activity_listoftests.xml
+++ b/app/src/main/res/layout/activity_listoftests.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.digywood.tms.ListofTests">
+    tools:context="com.digywood.tms.ListofPractiseTests">
 
     <RelativeLayout
         android:layout_width="match_parent"
