--- a/app/src/main/res/layout-xlarge/activity_attempt_data.xml
+++ b/app/src/main/res/layout-xlarge/activity_attempt_data.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FlashAttemptDataActivity">
+    tools:context=".AttemptDataActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -121,7 +121,6 @@
             android:id="@+id/tv_fdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -132,7 +131,6 @@
             android:id="@+id/tv_fknowcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -143,7 +141,6 @@
             android:id="@+id/tv_fdonknowcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -154,7 +151,6 @@
             android:id="@+id/tv_fskipcount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -165,7 +161,6 @@
             android:id="@+id/tv_fpercentage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center_vertical"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="16sp"
